[project]
name = "option-buyer-bot"
version = "0.7.0"
description = "OptionBuyerBot - 24/7 Telegram with countdown + live market + Shoonya + Varun + Arena multi-LLM"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-telegram-bot[job-queue]==21.4",
    "python-dotenv==1.0.1",
    "Flask==3.0.2",
    "requests==2.32.3",
    "yfinance==0.2.40",
    "NorenRestApiPy==0.0.22",
    "pyotp==2.9.0",
    "websocket-client==1.9.0",
    "APScheduler==3.10.4",
    "pytz==2024.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "PyMuPDF>=1.24.0",
    "PyPDF2>=3.0.0",
]
